// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Sidenav adds mini classes without sideBarOpen 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 css-ListWrapper-1uojgra0 css-cv81gj"
  open={false}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 css-NavList-1uojgra2 css-18kwbx0"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-cog css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-calendar css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-heartbeat css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1hgrgsx"
              open={false}
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="css-NavVersion-1uojgra5 css-10oc3or"
  >
    <div
      className="css-Wrapper-f238mn0 css-fdqscn"
    >
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        Version Info
      </p>
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        Flexget: 
         
         
      </p>
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;

exports[`components/layout/Sidenav renders correctly with sideBarOpen 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 css-ListWrapper-1uojgra0 css-yfv61s"
  open={true}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 css-NavList-1uojgra2 css-18kwbx0"
  >
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-cog css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-calendar css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 css-NavItem-1uojgra3 css-1remvrh"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 css-NavButton-1uojgra4 css-1gug5qk"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-heartbeat css-1y2l9le"
            />
            <p
              className="css-Label-1uojgra1 css-1lwlcmp"
              open={true}
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="css-NavVersion-1uojgra5 css-1833tui"
  >
    <div
      className="css-Wrapper-f238mn0 css-fdqscn"
    >
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        Version Info
      </p>
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        Flexget: 
         
         
      </p>
      <p
        className="css-Line-f238mn1 css-6x29zm"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;
